[tool.poetry]
name = "git_cdn"
version = "v0.0.0"
description = "a Content Delivery Network for git"
authors = ["Nestor team <list.rsl_releng_admin@renault.com>"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
homepage = "https://gitlab.com/grouperenault/git_cdn"

packages = [
    { include = 'git_cdn/*.py' },
    { include = 'git_cdn/lock/*.py' },
    { include = 'git_cdn/cache_handler/*.py'}
]
include = [{path = 'git_cdn/tests/**/*', format = 'sdist'},
            {path = 'git_cdn/tests/*', format = 'sdist'}]

[tool.poetry.dependencies]
python = ">=3.8"
structlog = ">=21.5.0"
aiohttp = ">3.0.0"
gunicorn = "*"
sentry-sdk = "*"
ujson = "*"
uvloop = "^0.16.0"


[tool.poetry.dev-dependencies]
black = ">=19.10b0"
isort = "*"
colorama = "*"
pytest = "*"
pylint = "*"
pytest-mock = "*"
pytest-sugar = "*"
rope = "*"
aiohttp-devtools = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-aiohttp = "*"
pytest-benchmark = "*"
typed-ast = "*"
mock = "*"
yarl = "*"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
clean-gitcdn-cache = "git_cdn.cache_handler.clean_cache:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
