[tool.poetry]
name = "git_cdn"
version = "v0.0.0"
description = "a Content Delivery Network for git"
authors = ["Nestor team <list.rsl_releng_admin@renault.com>"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
homepage = "https://gitlab.com/grouperenault/git_cdn"

[tool.poetry.dependencies]
python = ">=3.10,<4"
structlog = ">=21.5.0"
aiohttp = "^3.8.3"
gunicorn = "*"
sentry-sdk = "^1.10.1"
ujson = "*"
uvloop = "^0.17.0"


[tool.poetry.dev-dependencies]
black = ">=22.12.0"
isort = "*"
colorama = "*"
pytest = "*"
pylint = "^2.15.8"
pytest-mock = "*"
pytest-sugar = "*"
rope = "*"
aiohttp-devtools = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-aiohttp = "*"
pytest-benchmark = "*"
typed-ast = "*"
mock = "*"
yarl = "*"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
