[metadata]
name = git_cdn
summary = a CDN for git
description-file = README.md
author = Nestor Team
author-email = list.rsl_releng_admin@renault.com
home-page = http://gitlab.tls.renault.fr/nestor/git-cdn
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    git_cdn
; add datafile to be included in your distribution packages here, ex:
; data-files = frontend = frontend/dist/*

; If your library has a CLI, define here the entry point
[entry_points]
console_scripts =
    git-cdn = git_cdn.app:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True

[pep8]
max-line-length = 100

[tool:pytest]
mock_use_standalone_module = true
junit_family=xunit2